add more data to /weather_data/forecast/different_from_sensors
